added lato font-family to body styles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <!-- Header -->
         <header>Header</header>
 
+        <h1 font-style="Lato"         >Hello world</h1>
+
         <!--Main content  -->
         <main>Main content</main>
 
