--- a/index.html
+++ b/index.html
@@ -19,16 +19,22 @@
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 
         <!-- Stylesheet link -->
-         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
 
     </head>
 
     <body>
         <!-- Header -->
-        <header>Header</header>
+        <header>
+          <a href="index.html">
+            
+            <h1 id="logo">Love Running</h1> 
 
-        <h1 font-style="Lato"         >Hello world</h1>
+               </a>
+
+        </header>
+
 
         <!--Main content  -->
         <main>Main content</main>
