--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
                 <h1 id="logo">Love Running</h1>
 
             </a>
+            <input type="checkbox" id="nav-toggle" name="nav-toggle">
+            <label for="nav-toggle" class="nav-toggle-label">X</label>
+
             <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
+                <ul id="menu">
+                    <li><a href="" class="active">Home</a></li>
                     <li><a href="">Gallery</a></li>
                     <li><a href="">Sign Up</a></li>
                 </ul>
@@ -49,9 +52,22 @@
 
         <!-- Footer -->
 
-        <footer>Footer</footer>
+        <footer>
+
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
 
 
+
+            </ul>
+
+
+        </footer>
+
+
+        <!-- Font Awesome Kit code -->
+        <script src="https://kit.fontawesome.com/b29eabad9a.js" crossorigin="anonymous"></script>
 
     </body>
 
