added all html links in navbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <link rel="stylesheet" href="assets/css/style.css">
 
 
+        <!-- Navbar links -->
+      
+         <link rel="index" href="index.html">
+         
+
+
     </head>
 
     <body>
@@ -54,7 +60,7 @@
 
         <footer>
 
-            <ul>
+            <ul id="social-networks">
                 <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
                         aria-label="Visit our Facebook page (opens in a new tab)"><i
                             class="fa-brands fa-facebook"></i></a></li>
