--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 
         <!-- Navbar links -->
-      
-         <link rel="index" href="index.html">
-         
+
+        <link rel="index" href="index.html">
+
 
 
     </head>
@@ -43,9 +43,9 @@
 
             <nav>
                 <ul id="menu">
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Sign Up</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
                 </ul>
 
             </nav>
@@ -54,7 +54,13 @@
 
 
         <!--Main content  -->
-        <main>Main content</main>
+        <main>
+
+            <section id="hero"></section>
+
+
+
+        </main>
 
         <!-- Footer -->
 
