--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
 
             <section id="hero"></section>
 
+            <div id="cover-text">
+
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+
+
+
+
+            </div>
+
+
 
 
         </main>
