--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <!-- Meetup Times section -->
             <section id="meetups">
-                <h2>Meet-up Times</h2>
+                <h2  class="hidden-heading" >Meet-up Times</h2>
                 <div id="times">
                     <div>
                         <h3>Urban <i class="fa-solid fa-city"></i></h3>
@@ -202,7 +202,7 @@
 
 
 
-                
+
             </section>
 
 
