--- a/signup.html
+++ b/signup.html
@@ -3,63 +3,43 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- meta name tags for search engines -->
+    <!-- Meta tags for search engines -->
     <meta name="description"
-        content="Love Running. Club for runners in Dublin, ireland. Urban running. trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="Love Running, run, running club, runners, Ireland, Dublin, sport, exercise  ">
-
-
-
-    <!-- Tilte -->
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-
-    <!-- Stylesheet link -->
-    <link rel="stylesheet" href="assets/css/style.css">\
-
-
-    <!-- Navbar links -->
-
-
-    <link rel="signup" href="signup.html">
-
-    <link rel="index" href="index.html">
-
-
-
-
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Header -->
     <header>
         <a href="index.html">
-
             <h1 id="logo">Love Running</h1>
-
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
-
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
-
         </nav>
-
     </header>
 
-
-    <!--Main content  -->
+    <!-- Main content -->
     <main>
-
         <section id="signup">
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
                 <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
@@ -89,44 +69,36 @@
                 <button type="submit" class="join-button">Let's Run!</button>
             </form>
         </section>
-
-
-
-
     </main>
 
     <!-- Footer -->
-
     <footer>
-
         <ul id="social-networks">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
             </li>
-
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
-
-
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
-
-
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our instagram page (opens in a new tab)"><i
-                        class="fa-brands fa-instagram"></i></a></li>
-
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
         </ul>
-
-
     </footer>
 
-
-    <!-- Font Awesome Kit code -->
-    <script src="https://kit.fontawesome.com/b29eabad9a.js" crossorigin="anonymous"></script>
-
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
